Fix spacing issue on IE compatibility warning.

--- a/css/main.css
+++ b/css/main.css
@@ -2890,4 +2890,5 @@ nav a:hover {
   color: white;
   font-size: 25pt;
   margin-top: 50px;
+  line-height: 30pt;
 }
