--- a/scss/theme/_custom.scss
+++ b/scss/theme/_custom.scss
@@ -50,4 +50,5 @@
   color: white;
   font-size: 25pt;
   margin-top: 50px;
+  line-height: 30pt;
 }
